--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/RacadAuto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\JTorres\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.Jasperreport.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
